--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,5 +3,5 @@ image: python:3.5
 test:
   script:
   - pip install -r requirements.txt
-  - sudo dnf install opencv3
+  - conda install -c menpo opencv3=3.1.0
   - py.test -v --cov
